# psmove-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt  OpenCVCameraCapture.cpp  test_tracker.cpp
utilities/: CMakeLists.txt  PSMoveConfigurator.cpp  PSMoveConfigurator.h  PSMoveConfiguratorMain.cpp
utilities/imgui/: imgui_impl_raylib.cpp  imgui_impl_raylib.h
utilities/resources/: PSMoveController.glb
